<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vmc.mcube.in.activity.XDetail">
    <item
        android:id="@+id/update"
        android:orderInCategory="100"
        android:title="@string/update"
        app:showAsAction="never" />
    <item
        android:id="@+id/followup"
        android:orderInCategory="100"
        android:title="@string/followup"
        app:showAsAction="never" />
    <item
        android:id="@+id/call"
        android:orderInCategory="100"
        android:title="@string/call"
        app:showAsAction="never" />
    <item
        android:id="@+id/sms"
        android:orderInCategory="100"
        android:title="@string/sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/email"
        android:orderInCategory="100"
        android:title="@string/email"
        app:showAsAction="never" />
</menu>
